<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>

    <!-- Xml Strings-->
    <!-- Quantity title [CHAR LIMIT=20] -->
    <string name="title">Coffee</string>
    <!-- Initial quantity [CHAR LIMIT=5] -->
    <string name="quantity">0</string>
    <!-- Order button [CHAR LIMIT=20] -->
    <string name="order">order</string>
    <!-- Subtotal title [CHAR LIMIT=20] -->
    <string name="title2">Subtotal:</string>
    <!-- Tax title [CHAR LIMIT=20] -->
    <string name="title3">Tax:</string>
    <!-- Increase button [CHAR LIMIT=5] -->
    <string name="increase">+</string>
    <!-- Decrease button [CHAR LIMIT=5] -->
    <string name="decrease">-</string>
    <!-- Toppings title [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>
    <!-- Whipped cream option [CHAR LIMIT=20] -->
    <string name="option1">Whipped cream</string>
    <!-- Chocolate option [CHAR LIMIT=20] -->
    <string name="option2">Chocolate</string>
    <!-- Customer title in landscape. [CHAR LIMIT=20] -->
    <string name="customer">Customer:</string>
    <!-- Hint text display in the empty field for the user's name. [CHAR LIMIT=20] -->
    <string name="name">Name</string>
    <!-- Chocolate price [CHAR LIMIT=20] -->
    <string name="chocPrice">$1.25</string>
    <!-- Whipped cream price [CHAR LIMIT=20] -->
    <string name="whipPrice">$0.75</string>
    <!-- Coffee price [CHAR LIMIT=20] -->
    <string name="coffeePrice">$2.50</string>
    <!-- Filler text for custom toast, to make editing easier. [CHAR LIMIT=20] -->
    <string name="fillerText">This is filler text.</string>

    <!-- Java Strings-->
    <!-- Whipped cream topping for the order summary. It will be shown in the format of "Add whipped cream? Yes" or "Add whipped cream? No". [CHAR LIMIT=NONE] -->
    <string name="addWhip">Add whipped cream? <xliff:g example="Yes" id="cream">%s</xliff:g></string>
    <!-- Chocolate topping for the order summary. It will be shown in the format of "Add chocolate? Yes" or "Add chocolate? No". [CHAR LIMIT=NONE] -->
    <string name="addChoc">Add chocolate? <xliff:g example="Yes" id="chocolate">%s</xliff:g></string>
    <!-- Quantity of coffee cups for the order summary. It will be shown in the format of "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE] -->
    <string name="orderQuant">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <!-- Total price for the order summary. It will be shown in the format of "Total: $10" where $10 is the price. [CHAR LIMIT=NONE] -->
    <string name="orderTot">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>
    <!-- Thank you message for the order summary. It will be shown in the format of "Thank you, Bob" where Bob is the user's name. [CHAR LIMIT=NONE] -->
    <string name="thankYou">Thank You, <xliff:g example="Bob" id="customer">%s</xliff:g>!</string>
    <!-- Topping yes [CHAR LIMIT=10] -->
    <string name="yes">Yes</string>
    <!-- Topping no [CHAR LIMIT=10] -->
    <string name="no">No</string>
    <!-- Subject line for the order summary email. It will be shown in the format of "Just Java Order Bob" where Bob is the user's name. [CHAR LIMIT=NONE] -->
    <string name="subject">Just Java Order For <xliff:g example="Bob" id="customer">%s</xliff:g></string>
    <!-- Maximum coffees [CHAR LIMIT=NONE] -->
    <string name="max">100 coffees maximum.</string>
    <!-- User name and minimum coffees toast title. [CHAR LIMIT=NONE] -->
    <string name="info">Please fill in all information:</string>
    <!-- User name and minimum coffees toast body. [CHAR LIMIT=NONE] -->
    <string name="minName">You must enter a name.\nYou must order at least 1 cup of coffee.</string>
    <!-- Minimum coffees [CHAR LIMIT=NONE] -->
    <string name="min">You must order at least 1 cup of coffee.</string>
</resources>
