<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/coffee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/layoutMargin"
            android:layout_marginRight="@dimen/layoutMargin"
            android:layout_marginTop="@dimen/quantityMargin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapWords" />

            <TextView
                style="@style/TitleTextView"
                android:text="@string/toppings" />

            <LinearLayout style="@style/ToppingsLayout">

                <CheckBox
                    android:id="@+id/whippedCream"
                    style="@style/CheckBox"
                    android:text="@string/option1" />

                <TextView
                    style="@style/CostPerCup"
                    android:text="@string/whipPrice" />
            </LinearLayout>

            <LinearLayout style="@style/ToppingsLayout">

                <CheckBox
                    android:id="@+id/chocolate"
                    style="@style/CheckBox"
                    android:text="@string/option2" />

                <TextView
                    style="@style/CostPerCup"
                    android:text="@string/chocPrice" />

            </LinearLayout>

            <TextView
                style="@style/TitleTextView"
                android:text="@string/title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/titleMargin"
                android:layout_marginStart="@dimen/titleMargin"
                android:layout_marginTop="@dimen/coffeeMargin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease"
                    style="@style/Button"
                    android:text="@string/decrease" />

                <TextView
                    android:id="@+id/quantityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/quantityMargin"
                    android:layout_marginRight="@dimen/quantityMargin"
                    android:text="@string/quantity"
                    android:textColor="@color/color"
                    android:textSize="@dimen/titleSize" />

                <Button
                    android:id="@+id/increase"
                    style="@style/Button"
                    android:text="@string/increase" />

                <TextView
                    style="@style/CostPerCup"
                    android:text="@string/coffeePrice" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quantityMargin">

                <TextView
                    style="@style/TitleTextView2"
                    android:text="@string/title2" />

                <TextView
                    android:id="@+id/priceText"
                    style="@style/PriceTextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TitleTextView2"
                    android:text="@string/title3" />

                <TextView
                    android:id="@+id/taxText"
                    style="@style/PriceTextView" />
            </LinearLayout>

            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/sideMargin"
                android:layout_marginTop="@dimen/sideMargin"
                android:background="@drawable/order_button"
                android:text="@string/order"
                android:textSize="@dimen/titleSize" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>